--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    name: minidb
-    url:
-    username:
-    password:
-    driver-class-name: com.mysql.jdbc.Driver
+    name: picadb
+    url: jdbc:mysql://127.0.0.1:3306/picadb?serverTimezone=UTC
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
   check-config-location: true
   mapper-locations: classpath:/mapper/*.xml
