--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,9 @@
+server:
+  port: 8090
 spring:
   datasource:
     name: picadb
-    url: jdbc:mysql://127.0.0.1:3306/picadb?serverTimezone=UTC
+    url: jdbc:mysql://192.168.121.132:3307/picadb?serverTimezone=UTC
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
